{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 1594,
  "lineage": "da69ab9f-cbbe-590a-6418-8c037c513d85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:targetgroup/learner-dev-tg/0f9669c1cc07c89c",
            "arn_suffix": "targetgroup/learner-dev-tg/0f9669c1cc07c89c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:targetgroup/learner-dev-tg/0f9669c1cc07c89c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:264595824735:loadbalancer/app/learner-dev-alb/ef2bf25f21c70bda"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "learner-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-tg",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-tg",
              "Project": "learner"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:targetgroup/learner-dev-tg/0f9669c1cc07c89c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b41d34b36a76e291",
            "arn": "arn:aws:ec2:ap-south-1:264595824735:elastic-ip/eipalloc-0b41d34b36a76e291",
            "association_id": "eipassoc-0c0fff4e0355db9e0",
            "domain": "vpc",
            "id": "eipalloc-0b41d34b36a76e291",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0e7ac6395386b1121",
            "private_dns": "ip-10-0-1-246.ap-south-1.compute.internal",
            "private_ip": "10.0.1.246",
            "public_dns": "ec2-3-7-162-217.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.162.217",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-nat-eip",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-nat-eip",
              "Project": "learner"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "eipalloc-0b41d34b36a76e291",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:internet-gateway/igw-03baa095a6cb0d67d",
            "id": "igw-03baa095a6cb0d67d",
            "owner_id": "264595824735",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-igw",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-igw",
              "Project": "learner"
            },
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "igw-03baa095a6cb0d67d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:loadbalancer/app/learner-dev-alb/ef2bf25f21c70bda",
            "arn_suffix": "app/learner-dev-alb/ef2bf25f21c70bda",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "learner-dev-alb-245898466.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:loadbalancer/app/learner-dev-alb/ef2bf25f21c70bda",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "learner-dev-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0d67ced7f7289cd19"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039b3975fc4665d0a"
              },
              {
                "subnet_id": "subnet-0f06629ee138bb0ee"
              }
            ],
            "subnets": [
              "subnet-039b3975fc4665d0a",
              "subnet-0f06629ee138bb0ee"
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-alb",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-alb",
              "Project": "learner"
            },
            "vpc_id": "vpc-09649eba0d62041ce",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:loadbalancer/app/learner-dev-alb/ef2bf25f21c70bda"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:listener/app/learner-dev-alb/ef2bf25f21c70bda/77a76526935c8346",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:targetgroup/learner-dev-tg/0f9669c1cc07c89c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:listener/app/learner-dev-alb/ef2bf25f21c70bda/77a76526935c8346",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:loadbalancer/app/learner-dev-alb/ef2bf25f21c70bda",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:264595824735:listener/app/learner-dev-alb/ef2bf25f21c70bda/77a76526935c8346"
          },
          "dependencies": [
            "aws_alb_target_group.server",
            "aws_lb.server",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b41d34b36a76e291",
            "association_id": "eipassoc-0c0fff4e0355db9e0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-010fdb98dfb2bd64b",
            "network_interface_id": "eni-0e7ac6395386b1121",
            "private_ip": "10.0.1.246",
            "public_ip": "3.7.162.217",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-039b3975fc4665d0a",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-nat",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-nat",
              "Project": "learner"
            },
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "nat-010fdb98dfb2bd64b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:route-table/rtb-073fa53e0ff6c0b77",
            "id": "rtb-073fa53e0ff6c0b77",
            "owner_id": "264595824735",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-010fdb98dfb2bd64b",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-private-rt",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-private-rt",
              "Project": "learner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "rtb-073fa53e0ff6c0b77",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:route-table/rtb-09d281a4907abf695",
            "id": "rtb-09d281a4907abf695",
            "owner_id": "264595824735",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03baa095a6cb0d67d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-public-rt",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-public-rt",
              "Project": "learner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "rtb-09d281a4907abf695",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0097a57a59f725964",
            "region": "ap-south-1",
            "route_table_id": "rtb-073fa53e0ff6c0b77",
            "subnet_id": "subnet-00ab14c27823d0127"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "rtbassoc-0097a57a59f725964",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aad7edbcc2026d25",
            "region": "ap-south-1",
            "route_table_id": "rtb-073fa53e0ff6c0b77",
            "subnet_id": "subnet-02d8c086dbba8ac86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "rtbassoc-0aad7edbcc2026d25",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d95c3e81dbd04ff",
            "region": "ap-south-1",
            "route_table_id": "rtb-09d281a4907abf695",
            "subnet_id": "subnet-039b3975fc4665d0a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "rtbassoc-05d95c3e81dbd04ff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public_b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7456bf6b1e89fbd",
            "region": "ap-south-1",
            "route_table_id": "rtb-09d281a4907abf695",
            "subnet_id": "subnet-0f06629ee138bb0ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "rtbassoc-0f7456bf6b1e89fbd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group/sg-0d67ced7f7289cd19",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d67ced7f7289cd19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "learner-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "264595824735",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-alb-sg",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-alb-sg",
              "Project": "learner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sg-0d67ced7f7289cd19",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group/sg-0089aa9d4cf8a7437",
            "description": "Db Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0089aa9d4cf8a7437",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013918bdf1fc183c6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "learner-dev-web-db-sg",
            "name_prefix": "",
            "owner_id": "264595824735",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-db-sg",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-db-sg",
              "Project": "learner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sg-0089aa9d4cf8a7437",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group/sg-0e82dfa0759a5c685",
            "description": "Ecs instance sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e82dfa0759a5c685",
            "ingress": [],
            "name": "learner-dev-ecs-instance-sg",
            "name_prefix": "",
            "owner_id": "264595824735",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-ecs-instance-sg",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-ecs-instance-sg",
              "Project": "learner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sg-0e82dfa0759a5c685",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group/sg-06a0028257ad23964",
            "description": "Redis security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a0028257ad23964",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013918bdf1fc183c6"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "learner-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "264595824735",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-redis-sg",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-redis-sg",
              "Project": "learner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sg-06a0028257ad23964",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group/sg-013918bdf1fc183c6",
            "description": "Task Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013918bdf1fc183c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d67ced7f7289cd19"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "learner-dev-web-task-sg",
            "name_prefix": "",
            "owner_id": "264595824735",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-task-sg",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-task-sg",
              "Project": "learner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sg-013918bdf1fc183c6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:subnet/subnet-00ab14c27823d0127",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ab14c27823d0127",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264595824735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-private_a",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-private_a",
              "Project": "learner"
            },
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "subnet-00ab14c27823d0127",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:subnet/subnet-02d8c086dbba8ac86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d8c086dbba8ac86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264595824735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-private_b",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-private_b",
              "Project": "learner"
            },
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "subnet-02d8c086dbba8ac86",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:subnet/subnet-039b3975fc4665d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039b3975fc4665d0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264595824735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-public_a",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-public_a",
              "Project": "learner"
            },
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "subnet-039b3975fc4665d0a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:subnet/subnet-0f06629ee138bb0ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f06629ee138bb0ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264595824735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-public_b",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-public_b",
              "Project": "learner"
            },
            "vpc_id": "vpc-09649eba0d62041ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "subnet-0f06629ee138bb0ee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:vpc/vpc-09649eba0d62041ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00029294739d0ae2a",
            "default_route_table_id": "rtb-0c11ce002e95035a2",
            "default_security_group_id": "sg-08a111df0fb460d96",
            "dhcp_options_id": "dopt-05cde98858a226c1b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09649eba0d62041ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c11ce002e95035a2",
            "owner_id": "264595824735",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-vpc",
              "Project": "learner"
            },
            "tags_all": {
              "Environment": "dev",
              "Managed_by": "Terraform",
              "Name": "learner-dev-vpc",
              "Project": "learner"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "vpc-09649eba0d62041ce",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-0a64277d57f34d892",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a64277d57f34d892",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d67ced7f7289cd19",
            "security_group_rule_id": "sgr-0a64277d57f34d892",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-0a64277d57f34d892",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-0430df0abf8e9935f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0430df0abf8e9935f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0089aa9d4cf8a7437",
            "security_group_rule_id": "sgr-0430df0abf8e9935f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-0430df0abf8e9935f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-0afe9f1d0b092ad7c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0afe9f1d0b092ad7c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e82dfa0759a5c685",
            "security_group_rule_id": "sgr-0afe9f1d0b092ad7c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-0afe9f1d0b092ad7c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.ecs_instance",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "redis_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-0dea51ac61eb8a783",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0dea51ac61eb8a783",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-06a0028257ad23964",
            "security_group_rule_id": "sgr-0dea51ac61eb8a783",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-0dea51ac61eb8a783",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-059e8887a21dd5194",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-059e8887a21dd5194",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-013918bdf1fc183c6",
            "security_group_rule_id": "sgr-059e8887a21dd5194",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-059e8887a21dd5194",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.web_task",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-000afaca096497363",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-000afaca096497363",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d67ced7f7289cd19",
            "security_group_rule_id": "sgr-000afaca096497363",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-000afaca096497363",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-0983c3da005c46375",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0983c3da005c46375",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d67ced7f7289cd19",
            "security_group_rule_id": "sgr-0983c3da005c46375",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-0983c3da005c46375",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_to_web_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-0120931aa0455e167",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-0120931aa0455e167",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d67ced7f7289cd19",
            "region": "ap-south-1",
            "security_group_id": "sg-013918bdf1fc183c6",
            "security_group_rule_id": "sgr-0120931aa0455e167",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-0120931aa0455e167",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web_task",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "task_redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-0234a05a1eb963c70",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6379,
            "id": "sgr-0234a05a1eb963c70",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-013918bdf1fc183c6",
            "region": "ap-south-1",
            "security_group_id": "sg-06a0028257ad23964",
            "security_group_rule_id": "sgr-0234a05a1eb963c70",
            "tags": null,
            "tags_all": {},
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-0234a05a1eb963c70",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.redis",
            "aws_security_group.web_task",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_task_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:264595824735:security-group-rule/sgr-050b0f7acea706661",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-050b0f7acea706661",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-013918bdf1fc183c6",
            "region": "ap-south-1",
            "security_group_id": "sg-0089aa9d4cf8a7437",
            "security_group_rule_id": "sgr-050b0f7acea706661",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "264595824735",
            "id": "sgr-050b0f7acea706661",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.web_task",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}